<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fusion_matcher</name>
  <version>0.1.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ahnyh@todo.todo">ahnyh</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>OpenCV</depend> 
  <depend>erae_std_msgs</depend>
  <depend>erae_sensor_msgs</depend>
  <depend>erae_perception_msgs</depend>
  <depend>erae_fusion_msgs</depend>
  <depend>erae_diag_msgs</depend>
  <depend>ebase_node</depend>
  <depend>erae_vehicle_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
